Move web hosting items to the `public/` folder and update links.

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
         <meta name=author content="Jack Sivak">
         <meta name=viewport content="width=device-width">
         <title>Steganography Online</title>
-        <link rel="icon" type="image/png" href="favicon.png">
+        <link rel="icon" type="image/png" href="https://stuffjackmakes.com/steganography-online/favicon.png">
         <style>
             html {
                 background-color: #bbb;
@@ -149,7 +149,7 @@
     </head>
     <body>
         <main>
-            <img src="steganography_online_logo.png" alt="Steganography Online" title="Steganography Online" style="border: 0px;"/>
+            <img src="https://stuffjackmakes.com/steganography-online/steganography_online_logo.png" alt="Steganography Online" title="Steganography Online" style="border: 0px;"/>
             <h1 style="margin-bottom: 0px;">Steganography Online</h1>
             <div style="margin-bottom: 24px;"><i><strong>Hide text</strong> in any image</i></div>
 
