Update main website link.

--- a/public/index.html
+++ b/public/index.html
@@ -206,7 +206,7 @@
             </section>
         </main>
         <footer>
-            Made by <a href="stuffjackmakes.com">Jack Sivak</a>. Check out the project on <a href="https://github.com/StuffJackMakes/Steganography-Online">Github</a>
+            Made by <a href="https://stuffjackmakes.com">Jack Sivak</a>. Check out the project on <a href="https://github.com/StuffJackMakes/Steganography-Online">Github</a>
         </footer>
 
         <script type="text/javascript">
